<resources>
    <string name="app_name">Mining Reels</string>
    <string name="activity_settings">Settings</string>
    <string name="text_settings">Settings</string>
    <string name="text_music">Music</string>
    <string name="text_sound">Sound</string>
    <string name="button_close">Close</string>
    <string name="toggle_music_on">Music On</string>
    <string name="toggle_music_off_invisible">Music Off</string>
    <string name="frame_data_columns1">Frame Layout 1</string>
    <string name="frame_data_columns2">Frame Layout 2</string>
    <string name="frame_data_columns3">Frame Layout 3</string>
    <string name="text_you_won">Your coins</string>
    <string name="btn_setting">Setting</string>
    <string name="btn_max">max</string>
    <string name="btn_min">min</string>
    <string name="text_bet">bet amount</string>

    <string name="Offline_button">Offline</string>
    <string name="Online_button">Online</string>





</resources>