<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btn_min"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:background="@drawable/min"
                android:fontFamily="@font/acme"
                android:importantForAccessibility="no"
                android:text="@string/btn_min"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/bet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/text_bet"
                android:fontFamily="@font/acme"
                android:importantForAccessibility="no"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="28dp"
                android:textStyle="bold" />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                android:id="@+id/btn_max"
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:fontFamily="@font/acme"
                android:text="@string/btn_max"
                android:background="@drawable/max"
                android:textSize="19dp"
                android:importantForAccessibility="no"
                tools:ignore="SpUsage" />
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>