<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="100dp"
        android:layout_height="390dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/frame_data_columns1"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/settngs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/framedata2"
        android:layout_width="100dp"
        android:layout_height="390dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/frameLayout1"
        android:contentDescription="@string/frame_data_columns2"
        android:background="@drawable/settngs"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="390dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/frame_data_columns3"
        android:background="@drawable/settngs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/framedata2"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clickable="true" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>